force-app/main/default/objects/Delinquency__c/Delinquency__c.object-meta.xml
<CustomObject>
    <label>Delinquency</label>
    <nameField>
        <displayFormat>DEL-{0000}</displayFormat>
        <label>Delinquency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delinquencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>