force-app/main/default/objects/Delinquency__c/fields/Aging_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Aging_Bucket__c</fullName>
    <label>Aging Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1-30 Days</fullName><default>false</default><label>1-30 Days</label></value>
            <value><fullName>31-60 Days</fullName><default>false</default><label>31-60 Days</label></value>
            <value><fullName>61-90 Days</fullName><default>false</default><label>61-90 Days</label></value>
            <value><fullName>90+ Days</fullName><default>false</default><label>90+ Days</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>