force-app/main/default/objects/Delinquency__c/fields/Unit_Suite__c.field-meta.xml
<CustomField>
    <fullName>Unit_Suite__c</fullName>
    <label>Unit / Suite</label>
    <length>20</length>
    <type>Text</type>
</CustomField>