force-app/main/default/objects/Delinquency__c/fields/Yardi_AR_Id__c.field-meta.xml
<CustomField>
    <fullName>Yardi_AR_Id__c</fullName>
    <externalId>true</externalId>
    <label>Yardi AR Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>